# IKDD_Runtime

./: .gitignore  IKDD_Whitepaper.md  LICENSE  README.md  README_ja.md  pyproject.toml
docs/: CONCEPT_IKDD-CDD.md  CONCEPT_IKDD-CDD_ja.md  CONCEPT_RKD.md  CONCEPT_RKD_ja.md  IKDD_CORE_POLICY.md  IKDD_CORE_POLICY_ja.md  IKDD_Live_Coding.md  IKDD_Live_Coding_ja.md  IKDD_Manual-IntentFixed_Template_v1.0.md  IKDD_Manual-IntentFixed_Template_v1.0_ja.md  IKDD_Safety_Declaration.md  IKDD_Safety_Declaration_ja.md  IKDD_TOOL_PRINCIPLES.md  IKDD_TOOL_PRINCIPLES_ja.md  IKDD_Whitepaper.md  IKDD_Whitepaper_ja.md  Intent_OS_Architecture.md  Intent_OS_Architecture_OverView.md  Intent_OS_Concept.md  Intent_OS_Concept_ja.md  WHY_DEFINITION_FIRST.md  WHY_DEFINITION_FIRST_ja.md
docs/IntentOS/: Blueprint-schema.json  Blueprint.yaml
examples/csv_filter/: README.md  csv_filter.ikdd.yaml  tool.yaml
ikdd_runtime/: knowledge.yaml  tool.yaml
ikdd_runtime/ikdd/loader/: knowledge_loader.py
runtime/v0.1/: README.md
runtime/v0.2/: README.md  TESTING_GUIDE.md  assembler.py  cli.py  demo_hybrid_mode.py  runtime.py  test_generated_code.py
runtime/v0_2/: .gitignore  README.md  assembler.py  cli.py  compare_providers.py  knowledge.yaml  runtime.py  test_generated_code.py  test_hybrid_mode.py  utils.py
runtime/v0_3/: .gitignore  README.md
specs/: IKDD_Unified_RuleSet_v0.4.en.md  IKDD_Unified_RuleSet_v0.4.ja.md  IKDD_Unified_RuleSet_v0.4.yaml  IKDD_Unified_RuleSet_v0.4r5.en.md  IKDD_Unified_RuleSet_v0.4r5.en.yaml  IKDD_Unified_RuleSet_v0.4r5.ja.md  IKDD_Unified_RuleSet_v0.4r5.ja.yaml
(+25 files in other folders)
